// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Letter /> highlights correct 1`] = `
<div>
  <button
    class="css-18da9ax"
  >
    a
  </button>
</div>
`;

exports[`<Letter /> highlights incorrect 1`] = `
<div>
  <button
    class="css-1g2v0e2"
  >
    a
  </button>
</div>
`;

exports[`<Letter /> renders 1`] = `
<div>
  <button
    class="css-l4kfvz"
  >
    a
  </button>
</div>
`;
